# empty-cpp-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
.conan/profiles/: cpp17
.devcontainer/: Dockerfile  devcontainer.json
.zed/: settings.json
src/: main.cpp
